appservices/domain/multiversion/beta/deployment-v1.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    app: beta
    version: v1
  name: beta-v1
spec:
  replicas: 1
  selector:
    matchLabels:
      app: beta
      version: v1
  template:
    metadata:
      labels:
        app: beta
        version: v1
    spec:
      containers:
      - image: riveryc/app:v0.0.1
        name: beta
        ports:
        - containerPort: 8000
