appservices/domain/multiversion/beta/destinationrule.yaml
apiVersion: networking.istio.io/v1beta1
kind: DestinationRule
metadata:
  name: beta
spec:
  host: beta
  # trafficPolicy:
  #   tls:
  #     mode: ISTIO_MUTUAL
  subsets:
  - name: v1
    labels:
      version: v1
  # - name: add-branding
  #   labels:
  #     version: add-branding
